[package]
name = "tfv2rd"
version = "0.1.0"
authors = ["Hugh Cole-Baker <sigmaris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4"
log = "0.4"
path-absolutize = "3.0"
pathdiff = "0.2"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }

[dev-dependencies]
jsonschema = "0.12"
