[package]
name = "tfv2rd"
version = "0.1.0"
authors = ["Hugh Cole-Baker <sigmaris@gmail.com>"]
edition = "2018"
description = "A tool to read Terraform validate JSON output (on stdin) and output Reviewdog Diagnostic JSON format (on stdout)"
repository = "https://github.com/sigmaris/tfv2rd/"
license = "MIT"
exclude = [
    ".github/*",
]

[dependencies]
pretty_env_logger = "0.4"
log = "0.4"
path-absolutize = "3.0"
pathdiff = "0.2"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }

[dev-dependencies]
jsonschema = "0.12"
